# fidgetpy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  torus.stl
examples/: README.md  gcode.py  prospero.py  simple_3axis_machining.nc  svg_fonts.py
src/: lib.rs
src/fidgetpy/: __init__.py  _core.pyi  bop.py  errors.py  math.py  shapes.py  types.py  uop.py  vec.py  vmath.py
tests/: test_math.py  test_shapes.py  test_tree.py  test_vector_types.py
